@@ -1,3 +1,6 @@
+2020-12-19 (12.20)
+	SDL: Update editor popup appearance
+
 2020-11-19 (12.20)
 	COMMON: Fix to allow multiple modules and units within saem program
 
